# chengxu

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  playwright.config.mjs  wrangler.jsonc  wrangler.toml
android-client/: THIRD_PARTY_NOTICES.md  build.gradle.kts  settings.gradle.kts
contracts/: order-creation-v1.json  order-edit-v1.json  order-status-v1.json
design/: home-dashboard-concepts.html
docs/: android-client.md  latest-handoff-prompt.md  mobile-ui-atlas.md  windows-qa-report.md  windows-release-checklist.md
e2e/: global-setup.mjs  order-creation.spec.mjs  order-edit.spec.mjs
migrations/: 0001_create_repair_orders.sql  0002_security_and_operation_logs.sql  0003_access_code_plaintext_management.sql  0004_company_accounts.sql  0005_account_password_management.sql  0006_order_insurance_expiry.sql  0007_dictionaries_and_permissions.sql  0008_business_event_logs.sql  0008_order_settlement_receipts.sql  0009_cloud_insurance_and_customers.sql  0010_android_order_foundation.sql  0011_unified_order_creation.sql
scripts/: export-hugeicons-to-vector.mjs  export-hugeicons-to-vector.test.mjs
seed/: repair-orders-test-data.sql
shared/: orderStatusPermissions.js
src/: App.jsx  auditLogLogic.js  clientReleaseLogic.js  cloudRecordLogic.js  networkLogic.js  orderCapabilityState.js  orderCreationApi.js  orderCreationDraftStore.js  orderCreationLogic.js  orderEditApi.js  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+324 files in other folders)
